Yay! a working backend for the bot.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=tinder-ai-backend
-spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
+spring.ai.openai.api-key={SPRING_AI_OPEN_API_KEY}
 server.port=8082
+spring.ai.openai.chat.options.model=gpt-4o-mini
+spring.ai.openai.chat.options.temperature=0.7
+
+startup-actions.initializeProfiles=true
+
+tinderai.lookingForGender=woman
+
+# User's profile
+tinderai.character.user={id:'user', firstName:'Arijit', lastName:'Chatterjee', age:38, ethnicity:'Indian', gender:'MALE', bio:'Software engineer and learner. I like reading and making things.', imageUrl:'', myersBriggsPersonalityType:'INTP'}
